--- a/app/src/main/res/layout/activity_listahoteles.xml
+++ b/app/src/main/res/layout/activity_listahoteles.xml
@@ -4,18 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ceramicaimg"
+    tools:context=".Listahoteles">
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/listadinamicadehoteles"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintVertical_bias="0.47"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0.02"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
 
         />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
