--- a/app/src/main/res/layout/activity_resena.xml
+++ b/app/src/main/res/layout/activity_resena.xml
@@ -4,6 +4,46 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#805E0D"
     tools:context=".Resena">
+    <ImageView
+        android:id="@+id/ceramicaresana"
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
+        android:src="@drawable/ceramica2"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.2"
+        android:alpha="0.2"
+
+        />
+    <TextView
+        android:layout_width="350dp"
+        android:layout_height="400dp"
+        android:text="@string/resena"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="19dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:textAlignment="center"
+        android:textColor="@color/white" />
+
+    <Button
+        android:id="@+id/botonresena"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:backgroundTint="@color/white"
+        app:layout_constraintTop_toBottomOf="@id/ceramicaresana"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:text="Ver Hoteles"
+        app:layout_constraintVertical_bias="0.2"
+        android:textColor="@color/black"
+        android:textSize="20dp"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
