--- a/app/src/main/res/layout/activity_lista_restaurante.xml
+++ b/app/src/main/res/layout/activity_lista_restaurante.xml
@@ -6,4 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".ListaRestaurante">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/listadimanicarestaurante"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0.02"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
